one to many relation example and swagger integrationg
